[tool.poetry]
name = "estruturacao-projeto-dados"
version = "0.1.0"
description = "Projeto para aprender sobre estruturacao de um projeto de dados"
authors = ["Anderson Vieira <andersonvnascimento529@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
